k8s-istio-mesh.yml
# Istio Mutual TLS (mTLS) Strict Enforcement
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: hyper-default-mtls
  namespace: default
spec:
  mtls:
    mode: STRICT
---
# Deny-All Default Policy (Zero-Trust Baseline)
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: deny-all
  namespace: default
spec: {} # Empty spec means deny all traffic by default unless explicitly allowed
